<resources>
    <string name="app_name">Quick Links</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">QUICK LINKS</string>
    <string name="nav_header_subtitle">user@uselesss.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="placeHolder">PLACE HOLDER</string>

    <string name="menu_home">Home</string>
    <string name="menu_transfer">Transfer</string>
    <string name="menu_manage">Manage</string>
    <string name="menu_receive">Receive</string>
    <string-array name="file_types">
        <item>Business Card</item>
        <item>Resume</item>
        <item>Cover Letter</item>
        <item>Transcript</item>
        <item>CV</item>
    </string-array>

    <string name="team_name">Infinity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="tag_save_as">Save As</string>
    <string name="tag_export">Export</string>
    <string name="tag_delete">Delete</string>
    <string name="tag_import">Import</string>
    <string name="tag_transfer">Transfer</string>

</resources>
